Add linux build